--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -60,6 +60,7 @@ jobs:
               
             echo "✅✅✅ Application deployed!"
           host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
           user: ${{ secrets.SSH_USER }}
           pass: ${{ secrets.SSH_PASSWORD }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
