--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -63,3 +63,4 @@ jobs:
           user: ${{ secrets.SSH_USER }}
           pass: ${{ secrets.SSH_PASSWORD }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          args: "-tt"
