--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,6 +7,8 @@ jobs:
   Deploying:
     runs-on: ubuntu-latest
     steps:
+      - name: 🔎 Check IP
+        run: curl https://api.ipify.org
       - name: CD via SSH Private Key
         uses: fifsky/ssh-action@master
         with:
