--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.1",
+        "ext-simplexml": "*",
         "cviebrock/eloquent-sluggable": "^9.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.7",
-      "ext-simplexml": "*"
+        "maib/maibapi": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
