--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
         "ext-simplexml": "*",
         "cviebrock/eloquent-sluggable": "^9.0",
+        "doctrine/dbal": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.7",
-        "maib/maibapi": "^3.0",
-        "ext-curl": "*"
+        "maib/maibapi": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
